# coalesce_catalog_to_snowflake_sync

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: sync-catalog.yml
catalog_to_snowflake/: __init__.py  compute_changes.py  generate_sql.py  get_columns.py  get_tables.py  save_outputs.py  slack_notifier.py
